--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_colorpicker: ^1.1.0
+  popover: ^0.3.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
